--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,12 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 
+.project
+.settings/
+component/.checkstyle
+component/.classpath
+component/.project
+component/.settings/
+
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
