--- a/component/pom.xml
+++ b/component/pom.xml
@@ -39,6 +39,10 @@
             <groupId>org.ballerinalang</groupId>
             <artifactId>ballerina-builtin</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -130,6 +134,18 @@
                                     <artifactId>${project.artifactId}</artifactId>
                                     <version>${project.version}</version>
                                     <type>${project.packaging}</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>javax.mail</groupId>
+                                    <artifactId>mail</artifactId>
+                                    <version>${javax-mail.version}</version>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>javax.mail</groupId>
+                                    <artifactId>javax.mail-api</artifactId>
+                                    <version>${javax-mail-api.version}</version>
+                                    <type>jar</type>
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>${project.build.directory}/distribution</outputDirectory>
